# GOIT_WEB_dz13

./: README.md  pyproject.toml
HW_12/src/database/: db.py
quotes_to_scrape/quotes_toscrape/: settings.py  urls.py
quotes_to_scrape/quotesapp/migrations/: 0001_initial.py
